gitops/generated/codeserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: codeserver

spec:
  replicas: 1

  selector:
    matchLabels:
      app: codeserver

  template:
    metadata:
      labels:
        app: codeserver

    spec:
      containers:
      - name: codeserver

        image: codercom/code-server:latest

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          tcpSocket:
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 8080

          initialDelaySeconds: 30
          periodSeconds: 20
