gitops/generated/codeserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: codeserver

spec:
  selector:
    app: codeserver

  ports:
  - name: http
    port: 8080
    targetPort: 8080

  type: ClusterIP
