gitops/generated/codeserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver
  namespace: codeserver

spec:
  ingressClassName: traefik

  rules:
  - host: codeserver.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: codeserver
            port:
              number: 8080
